github/ci/prow-deploy/kustom/base/manifests/local/deck-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  name: deck
  namespace: default
spec:
  tls:
  - hosts:
    - prow.ci.kubevirt.io
    secretName: deck-tls
  rules:
  - host: prow.ci.kubevirt.io
    http:
      paths:
      - path: /hook
        pathType: Prefix
        backend:
          service:
            name: hook
            port:
              number: 8888
      - path: /
        pathType: Prefix
        backend:
          service:
            name: deck
            port:
              number: 80
